--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SITE DO JOSE</title>
+    <title>Site 1ºD</title>
 </head>
 <body>
     <header>
-        <h1>Seja bem vindo</h1>
+        <h1>Site WiLL o Proprio</h1>
+        <p>Estamos testando as tags</p>
     </header>
     <main>
-        <h2>este é o nosso site</h2>
-        <p>ou melhor, site do Jose</p>
+        <h2>Aula de pensamento computacional</h2>
+        <h3>Site de demonstração para os alunos</h3>
     </main>
     <section>
-        bla bla bla
+        <div>
+            <p>aqui vem um conteudo</p>
+        </div>
+        <div>
+            <p>outro conteudo</p>
+        </div>
     </section>
 </body>
 </html>
